NEXT_PUBLIC_NHOST_SUBDOMAIN

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_NHOST_SUBDOMAIN=https://nextjs-stripe-starter.vercel.app/
+NEXT_PUBLIC_NHOST_SUBDOMAIN=nextjs-stripe-starter-azure.vercel.app
 NEXT_PUBLIC_NHOST_REGION=
 
 # Stripe
